--- a/ui/html/pages/about.gohtml
+++ b/ui/html/pages/about.gohtml
@@ -1,10 +1,38 @@
 {{define "title"}}About{{end}}
 
 {{define "main"}}
-    <h2>About</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi at mauris dignissim,
-        consectetur tellus in, fringilla ante. Pellentesque habitant morbi tristique senectus
-        et netus et malesuada fames ac turpis egestas. Sed dignissim hendrerit scelerisque.</p>
-    <p>Praesent a dignissim arcu. Cras a metus sagittis, pellentesque odio sit amet,
-        lacinia velit. In hac habitasse platea dictumst. </p>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="banner">
+                <h1>Development and consulting</h1>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-6 offset-md-3 mb-5">
+            <h2>Skill set</h2>
+            <p>Experienced in developing analytics dashboards and auditing
+                software for
+                clients used globally, plus ETL, data pipelines &amp; web
+                development
+                spanning various industries.</p>
+            <ul class="skills">
+                <li>Code Python (PyCharm IDE) along with Django, Django REST
+                    framework, FastAPI, Flask
+                </li>
+                <li>HTML5, CSS3, Bootstrap
+                </li>
+                <li>JavaScript: Vue (Nuxt), React, Highcharts, Cypress</li>
+                <li>Databases: Postgres, MySQL</li>
+                <li>Use of command line tools</li>
+                <li>Git (GitHub / GitLab / Bitbucket)
+                <li>Unit Testing, Gunicorn, NGINX, CI/CD, Docker,
+                    Terraform, Serverless Framework
+                </li>
+                <li>Digital Ocean, AWS</li>
+                <li>AWS: EC2, S3, RDS, SES, Elastic Beanstalk, Lambda Functions</li>
+                <li>Linux, macOS</li>
+            </ul>
+        </div>
+    </div>
 {{end}}
