--- a/ui/html/partials/nav.gohtml
+++ b/ui/html/partials/nav.gohtml
@@ -1,24 +1,44 @@
 {{define "nav"}}
-    <nav>
-        <div>
-            <a href='/'>Home</a>
-            <a href='/about'>About</a>
-            {{if .IsAuthenticated}}
-                <a href='/snippet/create'>Create snippet</a>
-            {{end}}
-        </div>
-        <div>
-            {{if .IsAuthenticated}}
-                <a href='/account/view'>Account</a>
-                <form action='/user/logout' method='POST'>
-                    <!-- Include the CSRF token -->
-                    <input type='hidden' name='csrf_token' value='{{.CSRFToken}}'>
-                    <button>Logout</button>
-                </form>
-            {{else}}
-                <a href='/user/signup'>Signup</a>
-                <a href='/user/login'>Login</a>
-            {{end}}
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">Paul Codes</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent"
+                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a href='/about' class="nav-link">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="/tech" class="nav-link">Tech</a>
+                    </li>
+                    {{if .IsAuthenticated}}
+                        <li class="nav-item">
+                            <a href='/snippet/create' class="nav-link">Create snippet</a>
+                        </li>
+                    {{end}}
+
+                    {{if .IsAuthenticated}}
+                        <li class="nav-item">
+                            <a href='/account/view' class="nav-link">Account</a>
+                        </li>
+                        <form action='/user/logout' method='POST' class="d-flex">
+                            <input type='hidden' name='csrf_token' value='{{.CSRFToken}}'>
+                            <button class="btn btn-sm btn-outline-success">Logout</button>
+                        </form>
+                    {{else}}
+                        <li class="nav-item">
+                            <a href='/user/signup' class="nav-link">Signup</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href='/user/login' class="nav-link">Login</a>
+                        </li>
+                    {{end}}
+                </ul>
+            </div>
         </div>
     </nav>
 {{end}}
