--- a/ui/html/base.gohtml
+++ b/ui/html/base.gohtml
@@ -3,27 +3,59 @@
     <html lang='en'>
     <head>
         <meta charset='utf-8'>
-        <title>{{template "title" .}} - Snippetbox</title>
-        <link rel='stylesheet' href='/static/css/main.css'>
+        <title>{{template "title" .}} - Paul Codes</title>
         <link rel='shortcut icon' href='/static/img/favicon.ico' type='image/x-icon'>
-        <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700'>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:700italic,300">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poiret+One">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+              integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+              crossorigin="anonymous">
+        <link rel='stylesheet' href='/static/css/dark-theme.css'>
     </head>
     <body>
-    <header>
-        <h1><a href='/'>Snippetbox</a></h1>
-    </header>
     {{template "nav" .}}
-    <main>
-        <!-- Display the flash message if one exists -->
-        {{with .Flash}}
-            <div class='flash'>{{.}}</div>
-        {{end}}
-        {{template "main" .}}
+    <main class="content">
+        <div class="container">
+            <!-- Display the flash message if one exists -->
+            {{with .Flash}}
+                <div class="alert alert-success mt-3" role="alert">
+                    {{.}}
+                </div>
+            {{end}}
+            {{template "main" .}}
+        </div>
     </main>
-    <footer>
-        Powered by <a href='https://golang.org/'>Go</a> in {{.CurrentYear}}
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 col-sm-12">
+                    <p class="text-center">&copy;{{.CurrentYear}} <a href="/">Paul Codes</a>
+                    </p>
+                </div>
+                <div class="col-md-4 col-sm-12">
+                    <p class="text-center">
+                        <a href="https://www.youtube.com/watch?v=3odl-KoNZwk"
+                           target="_blank">It's more fun to compute</a> -
+                        Built with <a href='https://go.dev/' target="_blank">Go</a>
+                    </p>
+                </div>
+                <div class="col-md-4 col-sm-12">
+                    <p class="text-center">
+                        <a href="https://www.digitalocean.com/?refcode=4939aa38303e&utm_campaign=Referral_Invite&utm_medium=Referral_Program&utm_source=badge"><img
+                                    src="https://web-platforms.sfo2.digitaloceanspaces.com/WWW/Badge%202.svg"
+                                    alt="DigitalOcean Referral Badge"/></a>
+                    </p>
+                </div>
+            </div>
+        </div>
     </footer>
-    <script src="/static/js/main.js" type="text/javascript"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous" type="application/javascript"></script>
+    <script src="https://kit.fontawesome.com/7c51fa8cb3.js"
+            crossorigin="anonymous" type="application/javascript"></script>
+    <script src="/static/js/hide-messaage.js" type="application/javascript"></script>
     </body>
     </html>
 {{end}}
