--- a/ui/html/pages/login.gohtml
+++ b/ui/html/pages/login.gohtml
@@ -1,28 +1,40 @@
 {{define "title"}}Login{{end}}
 
 {{define "main"}}
-    <form action='/user/login' method='POST' novalidate>
-        <!-- Include the CSRF token -->
-        <input type='hidden' name='csrf_token' value='{{.CSRFToken}}'>
-        {{range .Form.NonFieldErrors}}
-            <div class='error'>{{.}}</div>
-        {{end}}
-        <div>
-            <label>Email:</label>
-            {{with .Form.FieldErrors.email}}
-                <label class='error'>{{.}}</label>
-            {{end}}
-            <input type='email' name='email' value='{{.Form.Email}}'>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="banner">
+                <h1>Login</h1>
+            </div>
         </div>
-        <div>
-            <label>Password:</label>
-            {{with .Form.FieldErrors.password}}
-                <label class='error'>{{.}}</label>
-            {{end}}
-            <input type='password' name='password'>
+    </div>
+    <div class="row">
+        <div class="col-md-6 offset-md-3">
+            <form action='/user/login' method='POST' novalidate>
+                <!-- Include the CSRF token -->
+                <input type='hidden' name='csrf_token' value='{{.CSRFToken}}'>
+                {{range .Form.NonFieldErrors}}
+                    <div class='text-danger'>{{.}}</div>
+                {{end}}
+                <div class="mb-3">
+                    <label class="form-label" for="formControlInput1">Email:</label>
+                    {{with .Form.FieldErrors.email}}
+                        <label class='form-label text-danger' for="formControlInput1">{{.}}</label>
+                    {{end}}
+                    <input type="email" name='email' value='{{.Form.Email}}' class="form-control" id="formControlInput1"
+                           placeholder="name@example.com">
+                </div>
+                <div class="mb-3">
+                    <label class="form-label" for="formControlInput2">Password:</label>
+                    {{with .Form.FieldErrors.password}}
+                        <label class='form-label text-danger' for="formControlInput2">{{.}}</label>
+                    {{end}}
+                    <input type='password' name='password' class="form-control" id="formControlInput2">
+                </div>
+                <div class="mb-3">
+                    <button type="submit" class="btn btn-primary mb-3">Login</button>
+                </div>
+            </form>
         </div>
-        <div>
-            <input type='submit' value='Login'>
-        </div>
-    </form>
+    </div>
 {{end}}
