--- a/ui/html/pages/password.gohtml
+++ b/ui/html/pages/password.gohtml
@@ -1,32 +1,45 @@
 {{define "title"}}Change Password{{end}}
 
 {{define "main"}}
-    <h2>Change Password</h2>
-    <form action='/account/password/update' method='POST' novalidate>
-        <input type='hidden' name='csrf_token' value='{{.CSRFToken}}'>
-        <div>
-            <label>Current password:</label>
-            {{with .Form.FieldErrors.currentPassword}}
-                <label class='error'>{{.}}</label>
-            {{end}}
-            <input type='password' name='currentPassword'>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="banner">
+                <h1>Change Password</h1>
+            </div>
         </div>
-        <div>
-            <label>New password:</label>
-            {{with .Form.FieldErrors.newPassword}}
-                <label class='error'>{{.}}</label>
-            {{end}}
-            <input type='password' name='newPassword'>
+    </div>
+    <div class="row">
+        <div class="col-md-6 offset-md-3">
+            <form action='/account/password/update' method='POST' novalidate>
+                <input type='hidden' name='csrf_token' value='{{.CSRFToken}}'>
+                <div class="mb-3">
+                    <label class="form-label" for="formControlInput1">Current password:</label>
+                    {{with .Form.FieldErrors.currentPassword}}
+                        <label class='form-label text-danger' for="formControlInput1">{{.}}</label>
+                    {{end}}
+                    <input type="password" name='currentPassword' class="form-control" id="formControlInput1"
+                           placeholder="Your password">
+                </div>
+                <div class="mb-3">
+                    <label class="form-label" for="formControlInput2">New password:</label>
+                    {{with .Form.FieldErrors.newPassword}}
+                        <label class='form-label text-danger' for="formControlInput2">{{.}}</label>
+                    {{end}}
+                    <input type="password" name='newPassword' class="form-control" id="formControlInput2"
+                           placeholder="At least 12 mixed characters">
+                </div>
+                <div class="mb-3">
+                    <label class="form-label" for="formControlInput3">Confirm new password:</label>
+                    {{with .Form.FieldErrors.newPasswordConfirmation}}
+                        <label class='form-label text-danger' for="formControlInput3">{{.}}</label>
+                    {{end}}
+                    <input type='password' name='newPasswordConfirmation' class="form-control" id="formControlInput3"
+                           placeholder="At least 12 mixed characters">
+                </div>
+                <div class="mb-3">
+                    <button type="submit" class="btn btn-primary">Change password</button>
+                </div>
+            </form>
         </div>
-        <div>
-            <label>Confirm new password:</label>
-            {{with .Form.FieldErrors.newPasswordConfirmation}}
-                <label class='error'>{{.}}</label>
-            {{end}}
-            <input type='password' name='newPasswordConfirmation'>
-        </div>
-        <div>
-            <input type='submit' value='Change password'>
-        </div>
-    </form>
+    </div>
 {{end}}
