--- a/ui/html/pages/signup.gohtml
+++ b/ui/html/pages/signup.gohtml
@@ -1,32 +1,48 @@
 {{define "title"}}Signup{{end}}
 
 {{define "main"}}
-    <form action='/user/signup' method='POST' novalidate>
-        <!-- Include the CSRF token -->
-        <input type='hidden' name='csrf_token' value='{{.CSRFToken}}'>
-        <div>
-            <label>Name:</label>
-            {{with .Form.FieldErrors.name}}
-                <label class='error'>{{.}}</label>
-            {{end}}
-            <input type='text' name='name' value='{{.Form.Name}}'>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="banner">
+                <h1>Sign up</h1>
+            </div>
         </div>
-        <div>
-            <label>Email:</label>
-            {{with .Form.FieldErrors.email}}
-                <label class='error'>{{.}}</label>
-            {{end}}
-            <input type='email' name='email' value='{{.Form.Email}}'>
+    </div>
+    <div class="row">
+        <div class="col-md-6 offset-md-3">
+            <form action='/user/signup' method='POST' novalidate>
+                <!-- Include the CSRF token -->
+                <input type='hidden' name='csrf_token' value='{{.CSRFToken}}'>
+                {{range .Form.NonFieldErrors}}
+                    <div class='text-danger'>{{.}}</div>
+                {{end}}
+                <div class="mb-3">
+                    <label class="form-label" for="formControlInput1">Name:</label>
+                    {{with .Form.FieldErrors.name}}
+                        <label class='form-label text-danger' for="formControlInput1">{{.}}</label>
+                    {{end}}
+                    <input type="text" name='name' value='{{.Form.Name}}' class="form-control" id="formControlInput1"
+                           placeholder="Your Name">
+                </div>
+                <div class="mb-3">
+                    <label class="form-label" for="formControlInput2">Email:</label>
+                    {{with .Form.FieldErrors.email}}
+                        <label class='form-label text-danger' for="formControlInput2">{{.}}</label>
+                    {{end}}
+                    <input type="email" name='email' value='{{.Form.Email}}' class="form-control" id="formControlInput2"
+                           placeholder="name@example.com">
+                </div>
+                <div class="mb-3">
+                    <label class="form-label" for="formControlInput3">Password:</label>
+                    {{with .Form.FieldErrors.password}}
+                        <label class='form-label text-danger' for="formControlInput3">{{.}}</label>
+                    {{end}}
+                    <input type='password' name='password' class="form-control" id="formControlInput3">
+                </div>
+                <div class="mb-3">
+                    <button type="submit" class="btn btn-primary">Sign up</button>
+                </div>
+            </form>
         </div>
-        <div>
-            <label>Password:</label>
-            {{with .Form.FieldErrors.password}}
-                <label class='error'>{{.}}</label>
-            {{end}}
-            <input type='password' name='password'>
-        </div>
-        <div>
-            <input type='submit' value='Signup'>
-        </div>
-    </form>
+    </div>
 {{end}}
