fix hide-flash.js loading

--- a/ui/html/base.gohtml
+++ b/ui/html/base.gohtml
@@ -55,7 +55,7 @@
             crossorigin="anonymous" type="application/javascript"></script>
     <script src="https://kit.fontawesome.com/7c51fa8cb3.js"
             crossorigin="anonymous" type="application/javascript"></script>
-    <script src="/static/js/hide-messaage.js" type="application/javascript"></script>
+    <script src="/static/js/hide-flash.js" crossorigin="anonymous" type="application/javascript"></script>
     </body>
     </html>
 {{end}}
