--- a/ui/html/pages/login.gohtml
+++ b/ui/html/pages/login.gohtml
@@ -32,7 +32,7 @@
                     <input type='password' name='password' class="form-control" id="formControlInput2">
                 </div>
                 <div class="mb-3">
-                    <button type="submit" class="btn btn-primary mb-3">Login</button>
+                    <button type="submit" class="btn btn-outline-primary">Login</button>
                 </div>
             </form>
         </div>
