--- a/ui/html/pages/password.gohtml
+++ b/ui/html/pages/password.gohtml
@@ -37,7 +37,7 @@
                            placeholder="At least 12 mixed characters">
                 </div>
                 <div class="mb-3">
-                    <button type="submit" class="btn btn-primary">Change password</button>
+                    <button type="submit" class="btn btn-outline-primary">Change password</button>
                 </div>
             </form>
         </div>
