--- a/ui/html/pages/signup.gohtml
+++ b/ui/html/pages/signup.gohtml
@@ -40,7 +40,7 @@
                     <input type='password' name='password' class="form-control" id="formControlInput3">
                 </div>
                 <div class="mb-3">
-                    <button type="submit" class="btn btn-primary">Sign up</button>
+                    <button type="submit" class="btn btn-outline-primary">Sign up</button>
                 </div>
             </form>
         </div>
