mv flash into nav

--- a/ui/html/partials/nav.gohtml
+++ b/ui/html/partials/nav.gohtml
@@ -39,6 +39,12 @@
                     {{end}}
                 </ul>
             </div>
+            <!-- Display the flash message if one exists -->
+            {{with .Flash}}
+                <div class="alert alert-success" role="alert">
+                    {{.}}
+                </div>
+            {{end}}
         </div>
     </nav>
 {{end}}
