--- a/ui/html/base.gohtml
+++ b/ui/html/base.gohtml
@@ -20,30 +20,7 @@
             {{template "main" .}}
         </div>
     </main>
-    <footer class="footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4 col-sm-12">
-                    <p class="text-center">&copy;{{.CurrentYear}} <a href="/">Paul Codes</a>
-                    </p>
-                </div>
-                <div class="col-md-4 col-sm-12">
-                    <p class="text-center">
-                        <a href="https://www.youtube.com/watch?v=3odl-KoNZwk"
-                           target="_blank">It's more fun to compute</a> -
-                        Built with <a href='https://go.dev/' target="_blank">Go</a>
-                    </p>
-                </div>
-                <div class="col-md-4 col-sm-12">
-                    <p class="text-center">
-                        <a href="https://www.digitalocean.com/?refcode=4939aa38303e&utm_campaign=Referral_Invite&utm_medium=Referral_Program&utm_source=badge"><img
-                                    src="https://web-platforms.sfo2.digitaloceanspaces.com/WWW/Badge%202.svg"
-                                    alt="DigitalOcean Referral Badge"/></a>
-                    </p>
-                </div>
-            </div>
-        </div>
-    </footer>
+    {{template "footer"}}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
             crossorigin="anonymous" type="application/javascript"></script>
