--- a/ui/html/base.gohtml
+++ b/ui/html/base.gohtml
@@ -20,7 +20,7 @@
             {{template "main" .}}
         </div>
     </main>
-    {{template "footer"}}
+    {{template "footer" .}}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
             crossorigin="anonymous" type="application/javascript"></script>
