add go to about.gohtml

--- a/ui/html/pages/about.gohtml
+++ b/ui/html/pages/about.gohtml
@@ -20,6 +20,7 @@
                 <li>Code Python (PyCharm IDE) along with Django, Django REST
                     framework, FastAPI, Flask
                 </li>
+                <li>Code Go (GoLand IDE)</li>
                 <li>HTML5, CSS3, Bootstrap
                 </li>
                 <li>JavaScript: Vue (Nuxt), React, Highcharts, Cypress</li>
