--- a/ui/html/pages/view.gohtml
+++ b/ui/html/pages/view.gohtml
@@ -11,9 +11,9 @@
     <div class="row">
         <div class="col-md-8 offset-md-2">
             {{with .Snippet}}
-                <h2 class="mb-4">{{.Title}}</h2>
+                <h2 class="mb-4 text-center">{{.Title}}</h2>
                 <pre><code>{{.Content}}</code></pre>
-                <p>#{{.ID}} -
+                <p class="text-center">#{{.ID}} -
                     <time>Created: {{humanDate .Created}}</time>
                     -
                     <time>Expires: {{humanDate .Expires}}</time>
