--- a/ui/html/pages/account.gohtml
+++ b/ui/html/pages/account.gohtml
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="col-md-12">
             <div class="banner">
-                <h1>Your Account</h1>
+                <h1>Your account</h1>
             </div>
         </div>
     </div>
