--- a/ui/html/pages/create.gohtml
+++ b/ui/html/pages/create.gohtml
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="col-md-12">
             <div class="banner">
-                <h1>Create Snippet</h1>
+                <h1>Create snippet</h1>
             </div>
         </div>
     </div>
