--- a/ui/html/pages/home.gohtml
+++ b/ui/html/pages/home.gohtml
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="col-md-12">
             <div class="banner">
-                <h1>Latest Snippets</h1>
+                <h1>Latest snippets</h1>
             </div>
         </div>
     </div>
