--- a/ui/html/pages/password.gohtml
+++ b/ui/html/pages/password.gohtml
@@ -4,12 +4,12 @@
     <div class="row">
         <div class="col-md-12">
             <div class="banner">
-                <h1>Change Password</h1>
+                <h1>Change password</h1>
             </div>
         </div>
     </div>
     <div class="row">
-        <div class="col-md-6 offset-md-3">
+        <div class="col-md-4 offset-md-4">
             <form action='/account/password/update' method='POST' novalidate>
                 <input type='hidden' name='csrf_token' value='{{.CSRFToken}}'>
                 <div class="mb-3">
