--- a/ui/html/partials/nav.gohtml
+++ b/ui/html/partials/nav.gohtml
@@ -15,6 +15,9 @@
                     <li class="nav-item">
                         <a href="/tech" class="nav-link">Tech</a>
                     </li>
+                    <li class="nav-item">
+                        <a href="/contact" class="nav-link">Contact</a>
+                    </li>
                     {{if .IsAuthenticated}}
                         <li class="nav-item">
                             <a href='/snippet/create' class="nav-link">Create snippet</a>
